# zorto

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NEXT_STEPS.md  README.md  RESEARCH.md  TODO.md  build  build-py  build-rs  check  check-py  check-rs  deny.toml  format  format-py  format-rs  install  install-py  install-rs  netlify.toml  pyproject.toml  test  test-rs
.cargo/: config.toml
.github/workflows/: brew-bump.yml  check.yml  ci.yml  close-prs.yml  release-github.yml  release-python.yml  release-rust.yml  release.yml
crates/zorto-app/: Cargo.toml
crates/zorto-cli/: Cargo.toml
crates/zorto-cli/src/: cli.rs  lib.rs  main.rs  serve.rs  skill-zorto.md  skill.rs  templates.rs
crates/zorto-cli/templates/blog/: config.toml
crates/zorto-cli/templates/blog/content/: _index.md
crates/zorto-cli/templates/blog/content/posts/: getting-started.md  hello-world.md
crates/zorto-cli/templates/blog/templates/: base.html  section.html
crates/zorto-cli/templates/business/: config.toml
crates/zorto-cli/templates/default/: config.toml
crates/zorto-cli/templates/default/content/: _index.md
crates/zorto-cli/templates/default/content/posts/: hello.md
crates/zorto-cli/templates/docs/: config.toml
crates/zorto-cli/templates/docs/content/: _index.md
crates/zorto-cli/templates/docs/content/guide/: _index.md  configuration.md  installation.md  introduction.md
crates/zorto-cli/templates/docs/templates/: base.html  index.html  page.html  section.html
crates/zorto-cli/templates/presentation/: config.toml
crates/zorto-cli/templates/presentation/content/: _index.md
crates/zorto-cli/templates/presentation/content/intro/: _index.md  bullets.md  code.md  columns.md  fragments.md  thank-you.md  title.md
crates/zorto-cli/templates/presentation/templates/: base.html  page.html
crates/zorto-core/: Cargo.toml
crates/zorto-core/src/: cache.rs  config.rs  content.rs  execute.rs  lib.rs  links.rs  lint.rs  markdown.rs  sass.rs  search.rs  shortcodes.rs  site.rs  templates.rs  themes.rs
crates/zorto-core/syntaxes/: TOML.sublime-syntax
crates/zorto-core/themes/arctic/sass/: style.scss
crates/zorto-core/themes/charcoal/sass/: style.scss
crates/zorto-core/themes/dark/sass/: style.scss
crates/zorto-core/themes/dark/templates/: base.html
crates/zorto-core/themes/default/sass/: style.scss
crates/zorto-core/themes/dkdc/sass/: style.scss
crates/zorto-core/themes/dkdc/templates/: base.html  section.html
crates/zorto-core/themes/dkdc/templates/macros/: post.html
crates/zorto-core/themes/dkdc/templates/tags/: list.html  single.html
crates/zorto-core/themes/ember/sass/: style.scss
crates/zorto-core/themes/forest/sass/: style.scss
crates/zorto-core/themes/light/sass/: style.scss
crates/zorto-core/themes/light/templates/: base.html
crates/zorto-core/themes/lime/sass/: style.scss
crates/zorto-core/themes/midnight/sass/: style.scss
crates/zorto-core/themes/mint/sass/: style.scss
crates/zorto-core/themes/ocean/sass/: style.scss
crates/zorto-core/themes/plum/sass/: style.scss
crates/zorto-core/themes/rose/sass/: style.scss
crates/zorto-core/themes/sand/sass/: style.scss
crates/zorto-core/themes/shared/: _components.scss  _structure.scss
crates/zorto-core/themes/slate/sass/: style.scss
crates/zorto-core/themes/sunset/sass/: style.scss
crates/zorto-core/themes/zorto/sass/: style.scss
crates/zorto-core/themes/zorto/templates/: 404.html  base.html  index.html  page.html  section.html
crates/zorto-core/themes/zorto/templates/macros/: post.html
crates/zorto-core/themes/zorto/templates/tags/: list.html
crates/zorto-py/: Cargo.toml
crates/zorto-py/src/: lib.rs
crates/zorto-webapp/: Cargo.toml
crates/zorto-webapp/src/: assets.rs  build.rs  config.rs  dashboard.rs  html.rs  integration_tests.rs  lib.rs  onboarding.rs  pages.rs  preview.rs  sections.rs
docs/: README.md
docs/concepts/: README.md  ai-native.md  blog.md  callouts.md  configuration.md  content-model.md  data-apps.md  executable-code.md  fast.md  glossary.md  live-reload.md  open-source.md  presentations.md  search.md  shortcodes.md  templates.md  themes.md
docs/getting-started/: README.md  first-site.md  installation.md  quick-start.md
docs/how-to/: README.md  add-404-page.md  add-blog.md  add-favicon.md  add-search.md  add-sitemap.md  advanced-templating.md  altair.md  assets.md  build-blog.md  build-docs-site.md  build-optimization.md  create-presentation.md  custom-domain.md  customize-nav-footer.md  customize-theme.md  deploy.md  executable-code-blocks.md  matplotlib.md  multiple-authors.md  organize-content.md  plotly.md  seaborn.md  seo.md  troubleshooting.md
docs/reference/: README.md  callouts.md  cli.md  config.md  content-dirs.md  frontmatter.md  python-api.md  rust-api.md  shortcodes.md  taxonomies.md  template-functions.md
py/zorto/: __init__.py  core.pyi
src/zorto/: __init__.py
tests/: test_zorto.py
website/: AGENTS.md  CLAUDE.md  config.toml  pyproject.toml
website/content/: _index.md
website/content/analytics/: _index.md
website/content/posts/: executable-visualizations.md  roadmap-v1.md  welcome-to-zorto.md  zorto-data-apps.md
website/content/presentations/: _index.md
website/data/: analytics.toml  meta.toml
website/pipelines/: build_meta.py
website/sass/: style.scss
website/static/: analytics.css  syntax-dark.css
website/static/data/: analytics-dashboard.json  meta.ddb
website/static/js/: analytics-dashboard.js  data-app-runtime.js  presentation-data-slide.js
website/templates/: 404.html  analytics.html  base.html  docs-section.html  docs.html  index.html  page.html  presentation-native.html  presentation.html  presentations-section.html  section.html
website/templates/macros/: post.html
zorto/: Cargo.toml
zorto-py/: Cargo.toml
zorto-py/src/: lib.rs
zorto/src/: cli.rs  config.rs  content.rs  execute.rs  lib.rs  links.rs  main.rs  markdown.rs  sass.rs  serve.rs  shortcodes.rs  site.rs  templates.rs
zorto/tests/: build_integration.rs  llms_txt_integration.rs
zorto/tests/common/: mod.rs
(+43 files in other folders)
