[project]
name = "zorto"
version = "0.20.3"
description = "The AI-native static site generator (SSG) with executable code blocks"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cody", email = "cody@dkdc.io" }]
readme = "README.md"
dependencies = []

[project.urls]
Homepage = "https://github.com/dkdc-io/zorto"
Repository = "https://github.com/dkdc-io/zorto"
Issues = "https://github.com/dkdc-io/zorto/issues"

[project.scripts]
zorto = "zorto:main"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "ty>=0.0.19", "pytest>=8"]

[tool.maturin]
module-name = "zorto.core"
python-packages = ["zorto"]
python-source = "py"
manifest-path = "crates/zorto-py/Cargo.toml"

[tool.ty.src]
exclude = ["tests/"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/zorto-core/**/*.rs" },
    { file = "crates/zorto-cli/**/*.rs" },
    { file = "crates/zorto-py/**/*.rs" },
]
