[workspace]

[package]
name = "zorto-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]

[lib]
name = "zorto_core"
crate-type = ["cdylib"]

[dependencies]
zorto = { path = "../zorto", default-features = false, features = ["python"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
