[package]
name = "zorto-app"
version = "0.22.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cody <cody@dkdc.io>"]
description = "Desktop app for zorto (future)"
license = "MIT"
repository = "https://github.com/dkdc-io/zorto"
homepage = "https://github.com/dkdc-io/zorto"

[dependencies]
anyhow = "1"
