[package]
name = "zorto"
version = "0.13.1"
edition = "2024"
rust-version = "1.85"
authors = ["Cody <cody@dkdc.dev>"]
description = "The AI-native static site generator (SSG) with executable code blocks"
license = "MIT"
repository = "https://github.com/dkdc-io/zorto"
homepage = "https://github.com/dkdc-io/zorto"
keywords = ["static-site", "cms", "markdown", "tera"]
categories = ["command-line-utilities", "web-programming"]
readme = "../../README.md"

[lib]
name = "zorto"
path = "src/lib.rs"

[[bin]]
name = "zorto"
path = "src/main.rs"

[features]
default = ["embed-python", "theme-dkdc", "theme-light", "theme-dark", "theme-zorto"]
embed-python = ["zorto-core/embed-python"]
python = ["zorto-core/python"]
theme-dkdc = ["zorto-core/theme-dkdc"]
theme-light = ["zorto-core/theme-light"]
theme-dark = ["zorto-core/theme-dark"]
theme-zorto = ["zorto-core/theme-zorto"]
webapp = ["dep:zorto-webapp"]
app = ["dep:zorto-app"]

[dependencies]
zorto-core = { path = "../zorto-core", version = "0.13.1", default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs"] }

# HTTP server (preview)
axum = { version = "0.8", features = ["ws"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Utilities
anyhow = "1"
open = "5"

# Optional webapp/app
zorto-webapp = { path = "../zorto-webapp", version = "0.13.1", optional = true }
zorto-app = { path = "../zorto-app", version = "0.13.1", optional = true }

[dev-dependencies]
tempfile = "3"
