[package]
name = "zorto"
version = "0.23.0"
edition = "2024"
rust-version = "1.85"
authors = ["Cody <cody@dkdc.io>"]
description = "The AI-native static site generator (SSG) with executable code blocks"
license = "MIT"
repository = "https://github.com/dkdc-io/zorto"
homepage = "https://github.com/dkdc-io/zorto"
keywords = ["static-site", "cms", "markdown", "tera"]
categories = ["command-line-utilities", "web-programming"]
readme = "../../README.md"

[lib]
name = "zorto"
path = "src/lib.rs"

[[bin]]
name = "zorto"
path = "src/main.rs"

[features]
default = ["embed-python", "search", "webapp", "theme-zorto", "theme-dkdc", "theme-default", "theme-ember", "theme-forest", "theme-ocean", "theme-rose", "theme-slate", "theme-midnight", "theme-sunset", "theme-mint", "theme-plum", "theme-sand", "theme-arctic", "theme-lime", "theme-charcoal"]
embed-python = ["zorto-core/embed-python"]
python = ["zorto-core/python"]
theme-zorto = ["zorto-core/theme-zorto"]
theme-dkdc = ["zorto-core/theme-dkdc"]
theme-default = ["zorto-core/theme-default"]
theme-ember = ["zorto-core/theme-ember"]
theme-forest = ["zorto-core/theme-forest"]
theme-ocean = ["zorto-core/theme-ocean"]
theme-rose = ["zorto-core/theme-rose"]
theme-slate = ["zorto-core/theme-slate"]
theme-midnight = ["zorto-core/theme-midnight"]
theme-sunset = ["zorto-core/theme-sunset"]
theme-mint = ["zorto-core/theme-mint"]
theme-plum = ["zorto-core/theme-plum"]
theme-sand = ["zorto-core/theme-sand"]
theme-arctic = ["zorto-core/theme-arctic"]
theme-lime = ["zorto-core/theme-lime"]
theme-charcoal = ["zorto-core/theme-charcoal"]
search = ["zorto-core/search"]
webapp = ["dep:zorto-webapp"]
app = ["dep:zorto-app"]

[dependencies]
zorto-core = { path = "../zorto-core", version = "0.23.0", default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs"] }

# HTTP server (preview)
axum = { version = "0.8", features = ["ws"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Utilities
anyhow = "1"
open = "5"

# Interactive TUI prompts
dialoguer = "0.11"

# Optional webapp/app
zorto-webapp = { path = "../zorto-webapp", version = "0.23.0", optional = true }
zorto-app = { path = "../zorto-app", version = "0.23.0", optional = true }

[dev-dependencies]
tempfile = "3"
