[package]
name = "zorto-core"
version = "0.16.2"
edition = "2024"
rust-version = "1.85"
authors = ["Cody <cody@dkdc.io>"]
description = "Core library for zorto — the AI-native static site generator (SSG) with executable code blocks"
license = "MIT"
repository = "https://github.com/dkdc-io/zorto"
homepage = "https://github.com/dkdc-io/zorto"
keywords = ["static-site", "cms", "markdown", "tera"]
categories = ["web-programming"]
readme = "../../README.md"

[features]
default = ["embed-python", "theme-zorto", "theme-dkdc", "theme-default", "theme-ember", "theme-forest", "theme-ocean", "theme-rose", "theme-slate", "theme-midnight", "theme-sunset", "theme-mint", "theme-plum", "theme-sand", "theme-arctic", "theme-lime", "theme-charcoal"]
embed-python = ["python", "pyo3/auto-initialize"]
python = ["dep:pyo3"]
theme-zorto = []
theme-dkdc = []
theme-default = []
theme-ember = []
theme-forest = []
theme-ocean = []
theme-rose = []
theme-slate = []
theme-midnight = []
theme-sunset = []
theme-mint = []
theme-plum = []
theme-sand = []
theme-arctic = []
theme-lime = []
theme-charcoal = []

[dependencies]
# Templating
tera = "1"

# Markdown
pulldown-cmark = { version = "0.12", features = ["simd"] }

# Syntax highlighting
syntect = "5"

# SCSS
grass = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Directory traversal
walkdir = "2"

# Python execution
pyo3 = { version = "0.28", optional = true }

# HTTP (for remote includes)
ureq = "3"

# Temp dirs (for theme SCSS merging)
tempfile = "3"

# Search index (SQLite FTS5)
rusqlite = { version = "0.34", features = ["bundled"] }

# Utilities
anyhow = "1"
chrono = "0.4"
slug = "0.1"
regex = "1"

[dev-dependencies]
tempfile = "3"
