[workspace]

[package]
name = "zorto-py"
version = "0.20.4"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"

[lib]
name = "zorto_core"
crate-type = ["cdylib"]

[dependencies]
zorto = { path = "../zorto-cli", default-features = false, features = ["python", "search", "theme-zorto", "theme-dkdc", "theme-default", "theme-ember", "theme-forest", "theme-ocean", "theme-rose", "theme-slate", "theme-midnight", "theme-sunset", "theme-mint", "theme-plum", "theme-sand", "theme-arctic", "theme-lime", "theme-charcoal"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
